# map-agent

./: .env.example  .gitignore  INTERVIEW_PREP_ARCADEGENT.md  RAG_OPTIMIZATION_COMPLETION_REPORT.md  README.md  docker-compose.yml
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/agent/context/: context_builder.py  context_payload.py
backend/app/agent/events/: event_types.py  replay_buffer.py
backend/app/agent/llm/: llm_config.py  provider_adapter.py  provider_router.py
backend/app/api/: deps.py
backend/app/auth/: jwt_verifier.py  models.py
backend/app/core/: config.py  container.py  lifecycle.py
backend/app/evaluation/: __init__.py  evaluator.py  gates.py  generation.py  judge.py  metrics.py  models.py  provenance.py  reporting.py
backend/app/protocol/: messages.py
backend/app/rag/: service.py
backend/app/services/: arcade_geo_resolver.py  knowledge_submission_filter.py  knowledge_submissions.py  region_catalog.py  region_service.py
backend/arcadegent_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/docs/: HUGGINGFACE_SETUP.md  RAG_HYBRID_SEARCH_GUIDE.md  RAG_OPTIMIZATION_SUMMARY.md  RAG_README.md  RAG_RERANKER_GUIDE.md
backend/evaluation/: README.md  dataset.schema.json  predictions.example.json  predictions.schema.json  thresholds.json
backend/evaluation/datasets/: arcadegent_demo_v2.json
backend/scripts/: compare_rag_reports.py  evaluate_rag.py  generate_http_contract.py  generate_stream_contract.py  run_agent_regression.py  validate_rag_dataset.py  verify_huggingface_models.py
docs/: README.md
(+103 files in other folders)
